janetrs_macros/tests/02-not-function.stderr
error: expected fn item
 --> tests/02-not-function:4:1
  |
4 | struct A(i32);
  | ^^^^^^^^^^^^^^
